Att Aula 3 Des. Ágil

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,7 +56,6 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Certificadora.sln",
-
+    "dotnet.defaultSolution": "Certificadora1.sln",
     "editor.codeLens": false
 }
